helm/turbo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbo
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turbo
  template:
    metadata:
      labels:
        app: turbo
    spec:
      containers:
      - name: turbo
        image: harbor.marcmarina.com/library/turbo-playground
        command: ["node", "apps/express-app"]
        ports:
        - containerPort: 8081  # Update with your app's port
        resources:          # Add this section
          limits:
            cpu: "500m"
            memory: "250Gi"
          requests:
            cpu: "250m"
            memory: "512Mi"
      # Only needed if Harbor requires auth:
      imagePullSecrets:
      - name: harbor-creds
